# srt-fbo-scraper

./: .cfignore  .dockerignore  .gitignore  Dockerfile  Dockerfile-Test  README.md  alembic.ini  apt.yml  build-deploy.sh  crontab  crontab-test  fbo.py  fbo_scraper.py  fbo_weekly_scraper.ipynb  fbo_weekly_scraper.py  html_tags.txt  main.py  manifest.dev.yml  manifest.prod.yml  manifest.yml  multi-buildpack.yml  pyproject.toml  requirements-test.txt  requirements.txt  requirements_test.txt  run-interactive-docker.sh  setup.cfg  setup.py  setup_old.py  system-security-plan.yml  test.py  tox.ini
.circleci/: config.yml
.github/: CONTRIBUTING.MD  STYLE-GUIDE.md
.github/workflows/: deploy.dev.yml
alembic/: alembic_helpers.py  env.py
alembic/dev/: 3df0b576624f_test.py  78823e9293e9_match_local_migrations.py
cf/: manifest.dev.yml  manifest.prod.yml  manifest.staging.yml
conf/: config.yml  ebuy.yml  passwd
data/: view_fy23_data.ipynb
docs/: fbo-doc.md  procedures.md
documentation/: ManualSetupGuide.md  eBuy.md
eda/: EDA.ipynb  Prediction Sandbox.ipynb  classifier_scott.ipynb  confidence_experiments.ipynb  eda_csmcallister.ipynb  ludwig.ipynb  model_comparison.ipynb  model_definition.yaml  model_predict_check.ipynb  not_applicable_training.ipynb  train_existing_model.ipynb
fixtures/: filtered_json_str.py  json_str.py  nightly_data.py  predicted_nightly_data.py  test.doc  test_doc.doc  updated_nightly_data.py
logs/: smartie-logger.log.2023-05-23
sql/migrations/: r11p0.sql  (+1 more)
tests/: conftest.py  db_test.py  db_utils_test.py  end_to_end_test.py  fbo_nightly_scraper_test.py  get_attachments_test.py  get_doc_text_test.py  get_fbo_attachments_test.py  get_notices_test.py  get_opps_test.py  mock_opps.py  predict_test.py  request_utils_test.py  sam_api_test.py  sam_utils_test.py  solicitaiton_update_test.py  supercronic_test.py  test.py  test_db.py  test_db_utils.py  test_ebuy.py  test_end_to_end.py  test_get_doc_text.py  test_get_opps.py  test_predict.py  test_request_utils.py  test_sam_api.py  test_sam_utils.py  test_solicitation_update.py  test_supercronic.py  test_utils.py  train_test.py
utils/: fbo.py  fbo_nightly_scraper.py  fbo_weekly_scraper.py  get_attachments.py  get_doc_text.py  get_fbo_attachments.py  get_notices.py  get_opps.py  html_tags.txt  json_log_formatter.py  predict.py  request_utils.py  sam_utils.py  train.py  xmltojson.py
(+1038 files in other folders)
