[metadata]
name = fbo-scraper
version = 1.0.0
author = Adam Buckingham
author_email = adam.buckingham@gsa.gov
description = This project gathers Information Technology (IT) solicitations that are posted by the US Federal Government on beta.sam.gov.
license = CC0 1.0 Universal
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    fbo_scraper
install_requires = 
    dill
    nltk
    numpy
    psycopg2
    python-json-logger
    requests
    scikit-learn
    scipy
    textract
    urllib3
    wget
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    ruff
    tox

[options.entry_points]
console_scripts =
    fbo-scraper = fbo_scraper.main:actual_main

[options.package_data]
fbo_scraper = py.typed

