[metadata]
name = fbo-scraper
version = 2.0.0
author = Adam Buckingham
author_email = adam.buckingham@gsa.gov
description = This project gathers Information Technology (IT) solicitations that are posted by the US Federal Government on beta.sam.gov.
license = CC0 1.0 Universal
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    addict
    dill
    imbalanced-learn
    nltk
    numpy
    psycopg2-binary
    python-dateutil
    python-json-logger
    PyYAML
    requests
    scikit-learn==1.2.2
    scipy
    sqlalchemy
    sqlalchemy_utils
    textract
    urllib3
    wget
python_requires = >=3.10
package_dir =
    =src
zip_safe = False
include_package_data = True


[options.extras_require]
dev =
    alembic
    fpdf
    python-docx
    pytest
    pytest-cov
    mypy
    requests_mock
    reportlab
    ruff

[options.package_data]
mypkg =
    *.pkl


[options.packages.find]
where=src
exclude =
    cf*
    bin*
    docs*


[options.entry_points]
console_scripts =
    fbo_scraper = fbo_scraper.main:actual_main

